--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi-objectid": "^3.0.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.7",
+    "nodemailer": "^6.4.2",
     "path": "^0.12.7",
     "request": "^2.88.0"
   },
